test/should-fail/vsgc34_paramTypes.f3
/*
 * Regression test: parameterized types
 * @test/compile-error
 *
 * temporarily moved to here from the regress directory.
 * The test is expected to fail because generics declaration is currently disabled
 *
 */

import java.lang.System;

var keyMap : java.util.Map<java.lang.Integer, java.lang.String> = new  java.util.HashMap<java.lang.Integer, java.lang.String>;

keyMap.put(4, "four");
keyMap.put(8, "eight");
keyMap.put(3, "three");
keyMap.put(6, "six");

System.out.println(keyMap.get(6));
System.out.println(keyMap.get(4));
System.out.println(keyMap.get(3));

